fix for homepage overlap with sentiment graph

--- a/WebApp/Sift/static/css/general_analytics.css
+++ b/WebApp/Sift/static/css/general_analytics.css
@@ -453,7 +453,7 @@ label {
 #sentiment_pie {
     display:inline-block;
     width: 30%;
-    margin-left: -7em;
+    float:left;
 }
 #sentiment_pie h2 {
     margin:0;
